# ZIMD

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  verify.sh  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: SIGNING.md
sample/: Reading features.md  Welcome to ZIMD.md
src/: App.svelte  app.css  hljs.css  main.ts  prose.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: fs.ts  markdown.test.ts  markdown.ts  paths.test.ts  paths.ts  platform.ts  scroll.test.ts  scroll.ts  stores.ts  types.ts
src/lib/components/: CommandPalette.svelte  FileTree.svelte  Icon.svelte  PasteModal.svelte  Reader.svelte  Sidebar.svelte  TableOfContents.svelte  TitleBar.svelte  Welcome.svelte  WindowControls.svelte
src/lib/i18n/: en.ts  es.ts  i18n.test.ts  index.ts  ja.ts  zh-TW.ts
